feat: calculator display

--- a/src/calculator.html
+++ b/src/calculator.html
@@ -1,7 +1,5 @@
 <div class="calculator">
-    <div class="calculator__output">
-        <input class="calculator__display" type="text" placeholder="0" readonly>
-    </div>
+    <input class="calculator__display" type="text" value="0" readonly>
     <div class="calculator__keys">
         <button class="calculator__key calculator__key--operator">+</button>
         <button class="calculator__key calculator__key--operator">-</button>
